--- a/_sass/_font.sass
+++ b/_sass/_font.sass
@@ -18,7 +18,7 @@
   --hed-size-md: 1.625em
   --hed-size-lg: 2.063em
 
-  --page-width: 30em
+  --page-width: 34em
 
 //-----------------------------------------------------------------------------
 
@@ -27,7 +27,6 @@
   \:root
 
     --line-height-body: 1.6875
-    --page-width: 34em
 
 //-----------------------------------------------------------------------------
 
